Adding type script

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-jshint": "^2.0.1",
+    "gulp-typescript": "^2.13.6",
     "jshint": "^2.9.2"
   }
 }
