--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "RogueOS",
+  "name": "rogueos",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine-node src/spec"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.7.9",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-jshint": "^2.0.1",
     "gulp-typescript": "^2.13.6",
+    "jasmine-node": "^1.14.5",
     "jshint": "^2.9.2"
   }
 }
