--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "gulp-bower": "0.0.13",
     "gulp-jasmine": "^2.4.0",
     "gulp-jshint": "^2.0.1",
+    "gulp-typedoc": "^2.0.0",
     "gulp-typescript": "^2.13.6",
     "jasmine-node": "^1.14.5",
-    "jshint": "^2.9.2"
+    "jshint": "^2.9.2",
+    "typedoc": "^0.4.4"
   },
   "dependencies": {
     "express": "^4.14.0"
